[package]
name = "unbytify"
version = "0.2.0"
authors = ["Dmytro Milinevskyi <dmilinevskyi@gmail.com>"]
description = "Convert units of digital information from string into the numeric equivalent and the other way around"
keywords = ["bytes", "convert", "format", "parse", "humanize"]
categories = ["value-formatting", "parsing"]
license = "Apache-2.0"
documentation = "https://docs.rs/unbytify"
homepage = "https://github.com/niamster/unbytify"
repository = "https://github.com/niamster/unbytify"
readme = "README.md"

[dependencies]
lazy_static = "1"
